--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^25.2.1",
     "intersection-observer": "^0.12.2",
     "luxon": "^3.6.1",
+    "prop-types": "^15.8.1",
     "query-string": "^9.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
