--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
     "react-router-dom": "^7.6.3",
+    "use-deep-compare": "^1.3.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
